@@ -122,6 +122,7 @@ struct dxJoint : public dObject {
   int flags;			// dJOINT_xxx flags
   dxJointNode node[2];		// connections to bodies. node[1].body can be 0
   dJointFeedback *feedback;	// optional feedback structure
+  dReal lambda[6];		// lambda generated by last step
 };
 
 
